@@ -4,11 +4,17 @@ http://cassandradriver.com
 
 2014-04-15 - V.1.14
 Carles Mateo
-Added to Driver cud.py escaping of < > & to html entities, to avoid problems with XML
+Added support for connecting to different port
+
+Added to Driver cud.py format XML escaping of < > & to html entities, to avoid problems with XML
+
+Added to Driver cud.py format XML escaping of < > & to html entities, to avoid problems with XML
 
 Added htmlentites to sample_www_form.php to display the <> characters.
 
 Added to sample_www_form.php display of the original query to the driver.
+
+debugp() allows to pass a parameter to stop the execution or not
 
 2014-04-13 - V.1.12
 Carles Mateo
